# notes

./: .bashrc  .gitignore  README.md  notable_issues.md  notes.md  quick_notes.md  useful_cmd_prompt_commands.md  useful_python_methods.py  useful_terminal_commands.md  vscode_shortcuts.md
CS_fundamentals/: README.md  setup.md
CS_fundamentals/ALGOS/: trees.md
CS_fundamentals/DB/: DB_implementation.md
CS_fundamentals/LINUX/: .bashrc  README.md  linux_debugging.md  shell_script_execution_UTH.md
CS_fundamentals/NETWORKS/: cast_methods.md  networks.md  ping.md
CS_fundamentals/OS/: OS.md  bootup.md  stl_vectors.md  storage_drives.md  sync_algos.py
CS_fundamentals/cpp/: README.md  arrays.cpp  control_flow_statements.cpp  lldb.md  miscellaneous_notes.md  notes.md  quick_notes.md  quick_notes_cpp.md  raytracer_cpp.md  setup_notes.md
CS_fundamentals/cpp/init_proj/: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
CS_fundamentals/cpp/init_proj/src/: main.cpp
CS_fundamentals/design_patterns/: design_patterns.md
CS_fundamentals/java/: README.md  language_specs.md
CS_fundamentals/python/: README.md
CS_fundamentals/system_design/: chat_app.excalidraw  design_uber.excalidraw  (+8 more)
famous_outages/: 2025_11_18_cloudflare.md  2025_12_03_react2shell.md
gitignores/: python_gitignores.txt
neetcode_150/: README.md  design_hashmap.md  simple_qns.md
python/: basics.py  parsing_df_techniques.py  parsing_string_techniques.py
shortcuts_n_useful_cmds/: keyboards.md  notion_shortcuts.md  shortcuts.md  useful_cmd_prompt_commands.md  useful_terminal_commands.md  vscode_shortcuts.md
tmp_raytracer/: raytracer_notes.md
(+118 files in other folders)
